; ModuleID = '/home/carl/AnghaBench/toxcore/auto_tests/extr_friends_test.c_do_tox.c'
source_filename = "/home/carl/AnghaBench/toxcore/auto_tests/extr_friends_test.c_do_tox.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@do_tox.dht_on = internal global i32 0, align 4
@m = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @do_tox(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32, i32* @do_tox.dht_on, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %10, label %5

5:                                                ; preds = %1
  %6 = load i32*, i32** %2, align 8
  %7 = call i64 @DHT_isconnected(i32* %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %5
  store i32 1, i32* @do_tox.dht_on, align 4
  br label %19

10:                                               ; preds = %5, %1
  %11 = load i32, i32* @do_tox.dht_on, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %18

13:                                               ; preds = %10
  %14 = load i32*, i32** %2, align 8
  %15 = call i64 @DHT_isconnected(i32* %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %18, label %17

17:                                               ; preds = %13
  store i32 0, i32* @do_tox.dht_on, align 4
  br label %18

18:                                               ; preds = %17, %13, %10
  br label %19

19:                                               ; preds = %18, %9
  %20 = load i32, i32* @m, align 4
  %21 = call i32 @doMessenger(i32 %20)
  ret void
}

declare dso_local i64 @DHT_isconnected(i32*) #1

declare dso_local i32 @doMessenger(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
